--- a/site/_views/about.html
+++ b/site/_views/about.html
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div>
-            <a href="mailto:info@theartcommittee.com" class="w-inline-block">
+            <a href="mailto:pilar@theartcommittee.com" class="w-inline-block">
               <div class="text-block-4">info@theartcommittee.com</div>
             </a>
           </div>
