Files committed from Adapter on Sat Jul 10 2021

--- a/site/_views/about.html
+++ b/site/_views/about.html
@@ -44,7 +44,7 @@
     <div class="middle">
       <div class="div-block">
         <div class="div-block-3">
-          <div class="div-block-5"><img src="/static/images/mollypilar.png" loading="lazy" alt="" class="image">
+          <div class="div-block-5"><img src="/static/images/MonikaW_210616_0480-Edit.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 88vw" srcset="/static/images/MonikaW_210616_0480-Edit.jpg 1080w, /static/images/MonikaW_210616_0480-Edit.jpg 1600w, /static/images/MonikaW_210616_0480-Edit.jpg 2000w, /static/images/MonikaW_210616_0480-Edit.jpg 2600w, /static/images/MonikaW_210616_0480-Edit.jpg 3000w" alt="" class="image">
             <div>
               <h1 class="heading-3">About Us</h1>
             </div>
@@ -72,11 +72,15 @@
             </div>
           </div>
           <div>
-            <a href="mailto:pilar@theartcommittee.com" class="w-inline-block">
+            <a href="tel:9177445228" class="w-inline-block">
               <div class="text-block-4">info@theartcommittee.com</div>
             </a>
           </div>
-          <div id="w-node-be536c80-a664-cf90-c0c6-e2de3fdf300a-3fdf3002" class="text-block-4">917 744 5228</div>
+          <div id="w-node-be536c80-a664-cf90-c0c6-e2de3fdf300a-3fdf3002" class="text-block-4">
+            <a href="tel:9177445228" class="w-inline-block">
+              <div class="text-block-5">917 744 5228</div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
