--- a/site/_views/index.html
+++ b/site/_views/index.html
@@ -22,10 +22,14 @@
   }</style></head>
 <body class="body">
   <div class="container w-container">
-    <div class="logoheader">
-      <div class="logo">
-        <h1 class="heading">The Art Committee</h1>
-        <h6 class="heading-2">ART ADVISORY <span class="text-span">FOR</span> CORPORATE <span class="text-span-2">AND</span> PRIVATE COLLECTIONS</h6>
+    <div class="div-block-7">
+      <div class="logoheader">
+        <div class="logo">
+          <div class="div-block-8">
+            <div><img src="/static/images/logowithmark.svg" loading="lazy" width="300" alt=""></div>
+          </div>
+          <h6 class="heading-2">ART ADVISORY <span class="text-span">FOR</span> CORPORATE <span class="text-span-2">AND</span> PRIVATE COLLECTIONS</h6>
+        </div>
       </div>
     </div>
     <div class="navigation">
@@ -45,19 +49,19 @@
           <div class="text-block">THE ART COMMITTEE ADVISES CORPORATE COLLECTORS ON ARTWORK ACQUISITIONS THAT REFLECT THEIR UNIQUE CORPORATE CULTURE. WORKING WITHIN A WIDE RANGE OF BUDGETARY PARAMETERS, WE STRIVE TO ENHANCE THE WORK ENVIRONMENT WITH RELEVANT, DYNAMIC ART INSTALLATIONS. WE ADVISE ON LONG-TERM INVESTMENT STRATEGIES AND SOURCE ARTWORKS THROUGH OUR EXTRAORDINARY NETWORK OF ARTISTS, DEALERS AND AUCTION HOUSES. IN THE EVER-EVOLVING CONTEMPORARY ART WORLD, OUR KNOWLEDGE AND EXPERTISE IS UNPARALLELED AND THE RESULT IS A CUSTOM ART COLLECTION.</div>
           <div class="homehero">
             <div class="w-layout-grid grid">
-              <div id="w-node-_247991db-69df-52b9-42ab-c04ba203798e-a14c7446" class="artwork"><img src="/static/images/art1.png" loading="lazy" sizes="100vw" srcset="/static/images/art1-p-500.png 500w, /static/images/art1-p-800.png 800w, /static/images/art1.png 897w" alt=""></div>
-              <div id="w-node-_5acca978-1b87-8e72-dea2-d108de1f48ad-a14c7446" class="artwork"><img src="/static/images/art12.png" loading="lazy" sizes="100vw" srcset="/static/images/art12-p-500.png 500w, /static/images/art12.png 730w" alt=""></div>
-              <div id="w-node-eae958e3-a7d3-4cdd-add8-34d862783a23-a14c7446" class="artwork"><img src="/static/images/art3.png" loading="lazy" sizes="100vw" srcset="/static/images/art3-p-500.png 500w, /static/images/art3.png 597w" alt=""></div>
-              <div id="w-node-bd7d7b9d-7524-b196-4871-c058dd05f587-a14c7446" class="artwork"><img src="/static/images/art4.png" loading="lazy" sizes="100vw" srcset="/static/images/art4-p-500.png 500w, /static/images/art4.png 752w" alt=""></div>
+              <div id="w-node-_247991db-69df-52b9-42ab-c04ba203798e-a14c7446" class="artwork"><img src="/static/images/art1.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 767px) 85vw, (max-width: 991px) 87vw, 84vw" srcset="/static/images/art1-p-500.png 500w, /static/images/art1-p-800.png 800w, /static/images/art1.png 897w" alt=""></div>
+              <div id="w-node-_5acca978-1b87-8e72-dea2-d108de1f48ad-a14c7446" class="artwork"><img src="/static/images/art12.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 991px) 85vw, 730.0000610351562px" srcset="/static/images/art12-p-500.png 500w, /static/images/art12.png 730w" alt=""></div>
+              <div id="w-node-eae958e3-a7d3-4cdd-add8-34d862783a23-a14c7446" class="artwork"><img src="/static/images/art3.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 767px) 83vw, 596.99658203125px" srcset="/static/images/art3-p-500.png 500w, /static/images/art3.png 597w" alt=""></div>
+              <div id="w-node-bd7d7b9d-7524-b196-4871-c058dd05f587-a14c7446" class="artwork"><img src="/static/images/art4.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 991px) 85vw, 751.99658203125px" srcset="/static/images/art4-p-500.png 500w, /static/images/art4.png 752w" alt=""></div>
               <div id="w-node-_155153d0-2f72-9705-d192-2397ae18e8fe-a14c7446" class="artwork"><img src="/static/images/art5.jpg" loading="lazy" alt=""></div>
-              <div id="w-node-_19d5d632-1746-793c-2f2f-a0b1bd587b6f-a14c7446" class="artwork"><img src="/static/images/art6.png" loading="lazy" sizes="100vw" srcset="/static/images/art6-p-500.png 500w, /static/images/art6-p-800.png 800w, /static/images/art6.png 1000w" alt=""></div>
-              <div id="w-node-c06d22c6-ad4d-9e84-c3b7-250db436346b-a14c7446" class="artwork"><img src="/static/images/art7.png" loading="lazy" sizes="100vw" srcset="/static/images/art7-p-500.png 500w, /static/images/art7.png 582w" alt=""></div>
+              <div id="w-node-_19d5d632-1746-793c-2f2f-a0b1bd587b6f-a14c7446" class="artwork"><img src="/static/images/art6.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 767px) 85vw, (max-width: 991px) 87vw, 84vw" srcset="/static/images/art6-p-500.png 500w, /static/images/art6-p-800.png 800w, /static/images/art6.png 1000w" alt=""></div>
+              <div id="w-node-c06d22c6-ad4d-9e84-c3b7-250db436346b-a14c7446" class="artwork"><img src="/static/images/art7.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 767px) 83vw, 581.99658203125px" srcset="/static/images/art7-p-500.png 500w, /static/images/art7.png 582w" alt=""></div>
               <div id="w-node-_2274adda-b584-ecae-033e-20746a31d0e7-a14c7446" class="artwork"><img src="/static/images/art8.jpeg" loading="lazy" alt=""></div>
-              <div id="w-node-d5a5ad43-5bcb-67c1-37fa-40b587e4303b-a14c7446" class="artwork"><img src="/static/images/art9.png" loading="lazy" sizes="100vw" srcset="/static/images/art9-p-500.png 500w, /static/images/art9.png 700w" alt=""></div>
+              <div id="w-node-d5a5ad43-5bcb-67c1-37fa-40b587e4303b-a14c7446" class="artwork"><img src="/static/images/art9.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 991px) 85vw, 699.982666015625px" srcset="/static/images/art9-p-500.png 500w, /static/images/art9.png 700w" alt=""></div>
               <div id="w-node-_3577b3f4-d5a9-5dfc-d5d4-ac79b8f6a717-a14c7446" class="artwork"><img src="/static/images/art10.png" loading="lazy" alt=""></div>
-              <div id="w-node-a81f42ba-777d-65b5-5963-228bcf24f635-a14c7446" class="artwork"><img src="/static/images/art11.png" loading="lazy" sizes="100vw" srcset="/static/images/art11-p-500.png 500w, /static/images/art11-p-800.png 800w, /static/images/art11.png 900w" alt=""></div>
-              <div id="w-node-_2f802ece-cd9b-6978-fbcb-fdfe21b7b847-a14c7446" class="artwork"><img src="/static/images/art12.png" loading="lazy" sizes="100vw" srcset="/static/images/art12-p-500.png 500w, /static/images/art12.png 730w" alt=""></div>
-              <div id="w-node-af4ef806-fed0-f05d-9686-4f54198ab389-a14c7446" class="artwork"><img src="/static/images/art13.png" loading="lazy" sizes="100vw" srcset="/static/images/art13-p-500.png 500w, /static/images/art13.png 534w" alt=""></div>
+              <div id="w-node-a81f42ba-777d-65b5-5963-228bcf24f635-a14c7446" class="artwork"><img src="/static/images/art11.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 767px) 85vw, (max-width: 991px) 87vw, 84vw" srcset="/static/images/art11-p-500.png 500w, /static/images/art11-p-800.png 800w, /static/images/art11.png 900w" alt=""></div>
+              <div id="w-node-_2f802ece-cd9b-6978-fbcb-fdfe21b7b847-a14c7446" class="artwork"><img src="/static/images/art12.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 991px) 85vw, 730.0000610351562px" srcset="/static/images/art12-p-500.png 500w, /static/images/art12.png 730w" alt=""></div>
+              <div id="w-node-af4ef806-fed0-f05d-9686-4f54198ab389-a14c7446" class="artwork"><img src="/static/images/art13.png" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 767px) 80vw, 533.9931030273438px" srcset="/static/images/art13-p-500.png 500w, /static/images/art13.png 534w" alt=""></div>
               <div id="w-node-_18a413a0-f334-7480-5e11-3387b60add60-a14c7446" class="artwork"><img src="/static/images/art14.png" loading="lazy" alt=""></div>
               <div id="w-node-_140425cc-2cbe-72e5-a381-0e61e5341de7-a14c7446" class="artwork"><img src="/static/images/art15.png" loading="lazy" alt=""></div>
             </div>
@@ -75,11 +79,15 @@
             </div>
           </div>
           <div>
-            <a href="mailto:pilar@theartcommittee.com" class="w-inline-block">
+            <a href="tel:9177445228" class="w-inline-block">
               <div class="text-block-4">info@theartcommittee.com</div>
             </a>
           </div>
-          <div id="w-node-be536c80-a664-cf90-c0c6-e2de3fdf300a-3fdf3002" class="text-block-4">917 744 5228</div>
+          <div id="w-node-be536c80-a664-cf90-c0c6-e2de3fdf300a-3fdf3002" class="text-block-4">
+            <a href="tel:9177445228" class="w-inline-block">
+              <div class="text-block-5">917 744 5228</div>
+            </a>
+          </div>
         </div>
       </div>
       <div class="person"></div>
