--- a/site/_views/instagram.html
+++ b/site/_views/instagram.html
@@ -114,11 +114,15 @@
             </div>
           </div>
           <div>
-            <a href="mailto:info@theartcommittee.com" class="w-inline-block">
+            <a href="tel:9177445228" class="w-inline-block">
               <div class="text-block-4">info@theartcommittee.com</div>
             </a>
           </div>
-          <div id="w-node-be536c80-a664-cf90-c0c6-e2de3fdf300a-3fdf3002" class="text-block-4">917 744 5228</div>
+          <div id="w-node-be536c80-a664-cf90-c0c6-e2de3fdf300a-3fdf3002" class="text-block-4">
+            <a href="tel:9177445228" class="w-inline-block">
+              <div class="text-block-5">917 744 5228</div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
