Files committed from Adapter on Sat Jul 10 2021

--- a/site/_views/index.html
+++ b/site/_views/index.html
@@ -26,7 +26,7 @@
       <div class="logoheader">
         <div class="logo">
           <div class="div-block-8">
-            <div><img src="/static/images/logowithmark.svg" loading="lazy" width="300" alt=""></div>
+            <h1 class="heading">The Art Committee</h1>
           </div>
           <h6 class="heading-2">ART ADVISORY <span class="text-span">FOR</span> CORPORATE <span class="text-span-2">AND</span> PRIVATE COLLECTIONS</h6>
         </div>
