Files committed from Adapter on Sat Jul 10 2021

--- a/site/_views/about.html
+++ b/site/_views/about.html
@@ -24,11 +24,11 @@
   }</style></head>
 <body class="body">
   <div class="container w-container">
-    <div class="logoheader">
-      <div class="logo">
+    <div class="logo">
+      <div class="div-block-8">
         <h1 class="heading">The Art Committee</h1>
-        <h6 class="heading-2">ART ADVISORY <span class="text-span">FOR</span> CORPORATE <span class="text-span-2">AND</span> PRIVATE COLLECTIONS</h6>
       </div>
+      <h6 class="heading-2">ART ADVISORY <span class="text-span">FOR</span> CORPORATE <span class="text-span-2">AND</span> PRIVATE COLLECTIONS</h6>
     </div>
     <div class="navigation">
       <div data-collapse="tiny" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
