Files committed from Adapter on Wed Jul 14 2021

--- a/site/_views/about.html
+++ b/site/_views/about.html
@@ -44,7 +44,7 @@
     <div class="middle">
       <div class="div-block">
         <div class="div-block-3">
-          <div class="div-block-5"><img src="/static/images/MonikaW_210616_0480-Edit.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 88vw" srcset="/static/images/MonikaW_210616_0480-Edit.jpg 1080w, /static/images/MonikaW_210616_0480-Edit.jpg 1600w, /static/images/MonikaW_210616_0480-Edit.jpg 2000w, /static/images/MonikaW_210616_0480-Edit.jpg 2600w, /static/images/MonikaW_210616_0480-Edit.jpg 3000w" alt="" class="image">
+          <div class="div-block-5"><img src="/static/images/MonikaW_210616_0480-Edit.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 88vw" srcset="/static/images/MonikaW_210616_0480-Edit-p-1080.jpeg 1080w, /static/images/MonikaW_210616_0480-Edit-p-1600.jpeg 1600w, /static/images/MonikaW_210616_0480-Edit-p-2000.jpeg 2000w, /static/images/MonikaW_210616_0480-Edit-p-2600.jpeg 2600w, /static/images/MonikaW_210616_0480-Edit.jpg 3000w" alt="" class="image">
             <div>
               <h1 class="heading-3">About Us</h1>
             </div>
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div>
-            <a href="tel:9177445228" class="w-inline-block">
+            <a href="mailto:info@theartcommittee.com" class="w-inline-block">
               <div class="text-block-4">info@theartcommittee.com</div>
             </a>
           </div>
