--- a/site/_views/index.html
+++ b/site/_views/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div>
-            <a href="tel:9177445228" class="w-inline-block">
+            <a href="mailto:info@theartcommittee.com" class="w-inline-block">
               <div class="text-block-4">info@theartcommittee.com</div>
             </a>
           </div>
